Remove deprecated code and adapt tests